<resources>
    <string name="app_name">Boot Animation Handler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Nav Bar Menu -->
    <string name="navigation_backup_animation">Backup Current Animation</string>
    <string name="navigation_import_zip">Import Zip Animation</string>
    <string name="navigation_add_repo">Add Animation Repo</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_github">GitHub</string>
    <string name="navigation_donate">Buy me coffee</string>

    <!-- Dialog -->
    <string name="dialog_select_zip">Select Zip File</string>

    <!-- Alerts -->
    <string name="alert_backup_current">Would you like to backup your current boot animation?</string>

    <!-- Toasts -->


    <!-- Snackbar -->
    <string name="snack_replaced_animation">Animation successfully changed!</string>
    <string name="snack_require_root">Requires root access!</string>
    <string name="snack_request_root">Request Root</string>
    <string name="snack_backup">Backed up animation as %s</string>
    <string name="snack_boot_animation_missing">Boot Animation missing?</string>
    <string name="snack_cant_read_boot_animation">Can\'t Read Boot Animation</string>
    <string name="snack_failed_backup">Failed to backup your current boot animation</string>
    <string name="snack_failed_update_animation">Failed to change boot animation</string>

    <string name="action_settings">Settings</string>

</resources>
